# HomCalculation

./: .gitignore  README.md
HomCalculation/: .gitignore  A.txt  B.txt  B1.txt  CMakeLists.txt  HomCalculation.1  complex_storage.c  complex_storage.h  complex_struct.c  complex_struct.h  file_util.c  file_util.h  generate_complex.c  generate_complex.h  ipsolve_bridge.c  ipsolve_bridge.h  lis_bridge.c  lis_bridge.h  main.c  poly_birdge.h  poly_bridge.cpp  polytop_struct.c  polytop_struct.h  simplex.c  simplex.c.orig  simplex.h  simplex_basic.c  simplex_basic.h  sqlite_util.c  sqlite_util.h  task_2.c  task_2.h  trie.c
HomCalculation.xcodeproj/: project.pbxproj
HomCalculation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HomCalculation.xcodeproj/project.xcworkspace/xcshareddata/: HomCalculation.xccheckout
HomCalculation.xcodeproj/project.xcworkspace/xcuserdata/lukasa.xcuserdatad/xcdebugger/: Expressions.xcexplist
HomCalculation.xcodeproj/xcuserdata/lukasa.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
HomCalculation.xcodeproj/xcuserdata/lukasa.xcuserdatad/xcschemes/: HomCalculation.xcscheme  linux.xcscheme  xcschememanagement.plist
HomCalculation/Lib/: graph.c
HomCalculation/ip_solve/osx/: liblpsolve55.dylib
HomCalculation/lis/: Configure.h
HomCalculation/lis/src/: CMakeLists.txt
